methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:21: error: value and is not a member of Boolean
    if (xx*yy != 0 && xx < 7 and yy <7)
                             ^